移动端底部与移动版搜索

--- a/css/common/footer/footer.less
+++ b/css/common/footer/footer.less
@@ -2,3 +2,5 @@
 @import url('iframe.less');
 @import url('float.less');
 @import url('alert.less');
+@import url('responsive.less');
+@import url('mobile.less');
