--- a/css/common/header/header.less
+++ b/css/common/header/header.less
@@ -4,3 +4,5 @@
 @import url('userstatus.less');
 @import url('iframe.less');
 @import url('nav.less');
+@import url('responsive.less');
+@import url('mobile.less');
