--- a/css/common/header/nav.less
+++ b/css/common/header/nav.less
@@ -5,6 +5,7 @@
 	background-color:#fafafa;
 	.size(100%,@c-header-nav-height);
 	border-bottom:1px solid #ddd;
+	overflow:hidden; 	//for ipad
 }
 
 .c-header-nav-list{
