--- a/template/default/common/header_userstatus.htm
+++ b/template/default/common/header_userstatus.htm
@@ -2,7 +2,7 @@
 <!--status: is login and uid is not empty-->
 	<div class="c-header-user-login">
 		<div class="m-default" id="c-header-user-login-default">
-			<a href="home.php">
+			<a href="home.php" id="c-header-user-tg">
 				<span class="avatar">
 					<!--{avatar($_G[uid],small)}-->
 					<i id="c-header-usergroup" class="{if ($_G[groupid]==22)}vip{/if} $_G[groupid]">$_G[group][grouptitle]</i>
