--- a/template/default/common/panel.htm
+++ b/template/default/common/panel.htm
@@ -61,7 +61,6 @@
 					<!--{template common/header_userstatus}-->
 				</div>
 
-				<a class="c-header-sign none" href="http://www.jx3pve.com/forum.php?mod=post&action=newthread&fid=2"><i></i>签到</a>
 				<!--{if $_G['uid']}-->
 				<!--{hook/global_usernav_extra2}-->
 				<!--{/if}-->
@@ -70,7 +69,7 @@
 			</div>
 		</div>
 
-		<script src="http://css.jx3pve.com/js/mod/header.js"></script>
+		<script src="http://js.jx3pve.com/js/mod/header.js"></script>
 
 	<!--{hook/global_header}-->
 	<!--{/if}-->
