移动版底部

--- a/css/common/header/responsive.less
+++ b/css/common/header/responsive.less
@@ -1,5 +1,5 @@
 //平板竖屏
-.ua-mobile .screen-m{
+.ua-responsive .screen-m{
 	.c-header-search{
 		.w(280px);
 	}
@@ -12,7 +12,7 @@
 }
 
 //手机版
-.ua-mobile .screen-s{
+.ua-responsive .screen-s{
 	.c-header,.c-header-nav{
 		.none;
 	}
