--- a/template/default/common/header_common_responsive.htm
+++ b/template/default/common/header_common_responsive.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:wb="http://open.weibo.com/wb" class="{if ($_G[groupid]==1)||($_G[groupid]==2)||($_G[groupid]==3)||($_G[groupid]==37)||($_G[groupid]==38)||($_G[groupid]==39)||($_G[groupid]==40)}adminHTML{/if} {if ($_G[groupid]==22)}vipHTML{/if} ua-mobile">
+<html xmlns:wb="http://open.weibo.com/wb" class="{if ($_G[groupid]==1)||($_G[groupid]==2)||($_G[groupid]==3)||($_G[groupid]==37)||($_G[groupid]==38)||($_G[groupid]==39)||($_G[groupid]==40)}adminHTML{/if} {if ($_G[groupid]==22)}vipHTML{/if} ua-responsive">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 	<base href="{$_G['siteurl']}" />
