--- a/css/global/layout.less
+++ b/css/global/layout.less
@@ -18,7 +18,7 @@
 	   .auto(x);
 	}
 	//平板竖屏&手机版
-	.ua-mobile .screen-m,.ua-mobile .screen-s{
+	.ua-responsive .screen-m,.ua-responsive .screen-s{
 		.wp{
 			.w(auto);padding:0 10px;
 		}
