--- a/css/system/sitemap.less
+++ b/css/system/sitemap.less
@@ -47,11 +47,11 @@
 }
 
 //平板竖屏
-.ua-mobile .screen-m{
+.ua-responsive .screen-m{
 }
 
 //手机版
-.ua-mobile .screen-s{
+.ua-responsive .screen-s{
 	.sitemap-title{
 		.none;
 	}
