--- a/css/common/footer/mobile.less
+++ b/css/common/footer/mobile.less
@@ -1,7 +1,7 @@
 .i-footer{
 	.pf;.lb(0,0);.full(x);.z(20);
 	background-color:#f7f7f7;
-	.h(46px);
+	.h(@c-header-footer);
 	border-top:1px solid #ddd;
 	overflow:hidden;
 
