--- a/css/common/header/responsive.less
+++ b/css/common/header/responsive.less
@@ -9,6 +9,14 @@
 	.c-header .wp{
 		padding-right:0;
 	}
+	.c-header-user-logout{
+		padding-right:10px;
+	}
+	.c-header-nav-list li a{
+		font-size:13px;
+		padding-left:12px;
+		padding-right:12px;
+	}
 }
 
 //手机版
