--- a/template/default/common/faq.htm
+++ b/template/default/common/faq.htm
@@ -1,6 +1,9 @@
-<!--{template common/header}-->
+<!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/faq.css" type="text/css" />
-
+<header class="i-header">
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
+	<div class="i-header-title">FAQ</div>
+</header>
 <div class="faq-container">
 	<div class="wp">
 
