--- a/css/global/layout.less
+++ b/css/global/layout.less
@@ -24,6 +24,7 @@
 	   .auto(x);
 	}
 	//平板竖屏&手机版
+	.ua-responsive.w-1024,	//临时解决有做适配的页面的平板横屏问题
 	.ua-responsive .screen-m,.ua-responsive .screen-s{
 		.wp{
 			.w(auto);padding:0 10px;
