--- a/template/default/common/js.htm
+++ b/template/default/common/js.htm
@@ -5,6 +5,6 @@ var head_conf = {
 		CDNROOT:'http://js.jx3pve.com/js/'
 	}
 </script>
-<script src="http://js.jx3pve.com/js/head.js"></script>
-<script src="http://js.jx3pve.com/js/init.js"></script>
+<script src="http://js.jx3pve.com/js/head.min.js"></script>
+<script src="http://js.jx3pve.com/js/init.min.js"></script>
 <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
