--- a/template/yylmacro/portal/portal_topic_sitemap.htm
+++ b/template/yylmacro/portal/portal_topic_sitemap.htm
@@ -47,8 +47,8 @@
 			</ul>
 			<ul>
 				<li><a href="./">更新日志</a></li>
-				<li><a href="./">版权声明</a></li>
-				<li><a href="./">免责声明</a></li>
+				<li><a href="./portal.php?mod=topic&topicid=113">版权声明</a></li>
+				<li><a href="./portal.php?mod=topic&topicid=114">免责声明</a></li>
 				<li><a href="./">加入我们</a></li>
 				<li><a href="./">合作联系</a></li>
 				<li><a href="./">友情链接</a></li>
