--- a/css/common/footer/responsive.less
+++ b/css/common/footer/responsive.less
@@ -1,7 +1,9 @@
 //手机版
-.ua-responsive .screen-s .c-footer{
-	.none;
-}
-.c-float-help{
-	.none;
+.ua-responsive .screen-s{
+	.c-footer{
+		.none;
+	}
+	.c-float-help{
+		.none;
+	}
 }
