--- a/css/global.less
+++ b/css/global.less
@@ -56,7 +56,7 @@
 @import url('tobe/discuz/discuz-reset.less');		//基础重置
 @import url('tobe/discuz/discuz-block.less');		//块级样式
 @import url('tobe/discuz/discuz-button.less');		//按钮
-@import url('tobe/discuz/discuz-route.less');		//面包屑位置
+/*@import url('tobe/discuz/discuz-route.less');		//面包屑位置*/
 @import url('tobe/discuz/discuz-sortoption.less');	//分类信息
 @import url('tobe/discuz/discuz-list.less');			//列表页
 @import url('tobe/discuz/discuz-view.less');			//帖子页
@@ -272,13 +272,13 @@
 
 /*portal 门户
 ------------------------------------------*/
-@import url('tobe/portal/portal.less');				//门户
-@import url('tobe/portal/portal-sidebar.less');		//侧边栏
-@import url('tobe/portal/portal-cmt.less');			//评论
-@import url('tobe/portal/portal-list.less');			//列表
-@import url('tobe/portal/portal-view.less');			//单页
-@import url('tobe/portal/portal-post.less');			//推送
-@import url('tobe/portal/portal-admin.less');		//管理
+/*@import url('tobe/portal/portal.less');				//门户
+@import url('tobe/portal/portal-sidebar.less');		//侧边栏*/
+/*@import url('tobe/portal/portal-cmt.less');			//评论*/
+/*@import url('tobe/portal/portal-list.less');			//列表
+@import url('tobe/portal/portal-view.less');			//单页*/
+/*@import url('tobe/portal/portal-post.less');			//推送*/
+/*@import url('tobe/portal/portal-admin.less');		//管理*/
 
 
 /*fb 副本专题
