--- a/css/ui/form.less
+++ b/css/ui/form.less
@@ -23,6 +23,7 @@
 .pnc:active,.pn:active{
     background-position:0 0;
 }
+a.pnc{background-position:0 0;}
 
 .px, .pt, .ps, select{
     border: 1px solid #ddd;
