--- a/template/default/common/footer_common.htm
+++ b/template/default/common/footer_common.htm
@@ -24,9 +24,9 @@
 		<div class="c-footer-nav">
 			<a href="./sitemap">网站地图</a>
 			<a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">更新日志</a>
-			<a href="#">版权声明</a>
-			<a href="#">免责声明</a>
-			<a href="./portal.php?mod=topic&topicid=65">友情链接</a>
+			<a href="./portal.php?mod=topic&topicid=113">版权声明</a>
+			<a href="./portal.php?mod=topic&topicid=114">免责声明</a>
+			<a href="./portal.php?mod=topic&topicid=115">友情链接</a>
 			<a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=26">加入我们</a>
 			<a href="./portal.php?mod=topic&topicid=65">合作联系</a>
 		</div>
@@ -44,7 +44,7 @@
 		</div>
 
 		<div class="c-footer-copyright">
-			&copy; 2012-2016 <a href="$_G['setting']['siteurl']" target="_blank">$_G['setting']['sitename']</a> All rights reserved.
+			&copy; 2012-2016 <a href="$_G['setting']['siteurl']">$_G['setting']['sitename']</a> All rights reserved.
 		</div>
 
 		<!--{hook/global_footerlink}-->
