--- a/template/default/common/iframe_footer.htm
+++ b/template/default/common/iframe_footer.htm
@@ -1,4 +1,5 @@
 <!--{subtemplate common/header_common}-->
+<base href="{$_G['siteurl']}" target="_blank"/>
 </head>
 <body class="iframe-footer">
 <div>
