--- a/template/yylmacro/home/misc_stat.htm
+++ b/template/yylmacro/home/misc_stat.htm
@@ -1,6 +1,5 @@
 <!--{eval $_G['home_tpl_titles'] = array('{lang trends_and_statistics}');}-->
-<!--{template common/header}-->
-
+<!--{template common/header_m}-->
 <div class="stat-container">
 	<div class="wp">
 		<div id="pt" class="bm cl">
@@ -12,8 +11,27 @@
 			</div>
 		</div>
 
-		<div id="ct" class="ct2_a wp cl">
-			<div class="mn">
+		<div id="ct" class="ct2_a wp cl m-stat-main">
+			<div class="appl m-stat-sidebar">
+				<div class="tbn">
+					<h2 class="mt bbda">{lang stats}</h2>
+					<ul>
+						<li class="cl{if $op == 'basic'} a{/if}"><a href="misc.php?mod=stat&op=basic">{lang basic_situation}</a></li>
+						<li class="cl{if $op == 'forumstat'} a{/if}"><a href="misc.php?mod=stat&op=forumstat">{lang forum_stat}</a></li>
+						<li class="cl{if $op == 'team'} a{/if}"><a href="misc.php?mod=stat&op=team">{lang manage_team}</a></li>
+						<!--{if $_G['setting']['modworkstatus']}-->
+							<li class="cl{if $op == 'modworks'} a{/if}"><a href="misc.php?mod=stat&op=modworks">{lang mod_works}</a></li>
+						<!--{/if}-->
+						<!--{if $_G['setting']['memliststatus']}-->
+							<li class="cl{if $op == 'memberlist'} a{/if}"><a href="misc.php?mod=stat&op=memberlist">{lang member_list}</a></li>
+						<!--{/if}-->
+						<!--{if $_G['setting']['updatestat']}-->
+							<li class="cl{if $op == 'trend'} a{/if}"><a href="misc.php?mod=stat&op=trend">{lang trend}</a></li>
+						<!--{/if}-->
+					</ul>
+				</div>
+			</div>
+			<div class="mn m-stat-content">
 				<div class="bm bw0">
 					<h1 class="mt">{lang trends_and_statistics}</h1>
 					<form method="get" action="misc.php?mod=stat&op=trend">
@@ -123,7 +141,6 @@
 
 				</div>
 			</div>
-			<!--{subtemplate common/stat}-->
 		</div>
 	</div>
 </div>
