--- a/template/yylmacro/portal/list_news.htm
+++ b/template/yylmacro/portal/list_news.htm
@@ -4,6 +4,7 @@
 <!--{eval $wheresql = category_get_wheresql($cat);}-->
 <!--{eval $list = category_get_list($cat, $wheresql, $page);}-->
 
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/news.css" type="text/css" />
 <div class="portal-container portal-listpage">
 	<div class="portal-main">
 		<div class="portal-content" id="news_list">
