--- a/template/yylmacro/portal/view_news.htm
+++ b/template/yylmacro/portal/view_news.htm
@@ -1,6 +1,7 @@
 <!--{template common/header}-->
 <!--[name]{焦点头条·单页}[/name]-->
 
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/news.css" type="text/css" />
 <div class="portal-container portal-viewpage">
 	<script type="text/javascript" src="{$_G['setting']['jspath']}forum_viewthread.js?{VERHASH}"></script>
 	<script type="text/javascript">zoomstatus = parseInt($_G['setting']['zoomstatus']), imagemaxwidth = '{$_G['setting']['imagemaxwidth']}', aimgcount = new Array();</script>
