--- a/template/yylmacro/portal/portal_comment.htm
+++ b/template/yylmacro/portal/portal_comment.htm
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/comment.css" type="text/css" />
 <div class="c-cmt" id="comment">
 
 	<div class="c-cmt-header">
