--- a/template/yylmacro/portal/portal_comment_li.htm
+++ b/template/yylmacro/portal/portal_comment_li.htm
@@ -1,11 +1,11 @@
 <a name="comment_anchor_$comment[cid]"></a>
-<dl id="comment_{$comment[cid]}_li" class="ptm pbm bbda cl portal-cmt-libox">
+<dl id="comment_{$comment[cid]}_li" class="ptm pbm bbda cl c-cmt-libox">
 
-	<div class="portal-cmtliavt">
+	<div class="c-cmt-liavt">
 		<img src="http://www.jx3pve.com/uc_server/avatar.php?uid=$comment[uid]&size=small">
 	</div>
 	
-	<div class="portal-cmtli">
+	<div class="c-cmt-li">
 		<dt class="mbm">
 		<!--{if !empty($comment['uid'])}-->
 			<a href="home.php?mod=space&uid=$comment[uid]" class="xi2 xw1 portal-cmt-name" c="1">$comment[username]</a>
@@ -15,8 +15,8 @@
 			<span class="portal-cmttime"><!--{date($comment[dateline])}--></span>
 		<!--{if $comment[status] == 1}--><b>({lang moderate_need})</b><!--{/if}-->
 		</dt>
-		<dd class="portal-cmt-licontent"><!--{if $_G[adminid] == 1 || $comment[uid] == $_G[uid] || $comment[status] != 1}-->$comment[message]<!--{else}--> {lang moderate_not_validate}<!--{/if}--></dd>
-		<dd class="portal-cmt-rplbt">
+		<dd class="c-cmt-licontent"><!--{if $_G[adminid] == 1 || $comment[uid] == $_G[uid] || $comment[status] != 1}-->$comment[message]<!--{else}--> {lang moderate_not_validate}<!--{/if}--></dd>
+		<dd class="c-cmt-lireplybtn">
 				<!--{if !isset($_G[makehtml])}--><a href="javascript:;" onclick="portal_comment_requote($comment[cid], '$article[aid]');">{lang quote}</a> <!--{/if}-->
 				<!--{if ($_G['group']['allowmanagearticle'] || $_G['uid'] == $comment['uid']) && $_G['groupid'] != 7 && !$article['idtype']}-->
 				<a href="portal.php?mod=portalcp&ac=comment&op=edit&cid=$comment[cid]" id="c_$comment[cid]_edit" onclick="showWindow(this.id, this.href, 'get', 0);">{lang edit}</a>
