--- a/template/yylmacro/portal/portalcp_article.htm
+++ b/template/yylmacro/portal/portalcp_article.htm
@@ -1,4 +1,5 @@
 <!--{template common/header}-->
+<link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
 
 <!--{if $op == 'delete'}-->
 
@@ -77,9 +78,9 @@
 </form>
 <!--{elseif $op == 'add_success'}-->
 <div class="nfl">
-	<div class="f_c altw">
+	<div class="f_c altw m-push-tips">
 		<div class="alert_right">
-			<p>提交成功，请耐心等待审核:) <a href="http://www.jx3pve.com/portal.php?mod=portalcp&ac=article&catid=1&op=simple"><b>继续推送</b></a><br/></p>
+			<p class="m-push-tips-success">提交成功，请耐心等待审核。 <a href="http://www.jx3pve.com/portal.php?mod=portalcp&ac=article&catid=1&op=simple"><b>继续推送</b></a></p>
 			<p class="alert_btnleft">
 				<a href="{$article_add_url}&op=edit&aid=$aid">{lang article_edit}</a>
 				<span class="pipe">|</span>
