sort-* type-* 特殊class添加 about单页分离

--- a/css/global.less
+++ b/css/global.less
@@ -249,7 +249,7 @@
 /*about 关于
 ------------------------------------------*/
 @import url('tobe/public/base-bak.less');			
-@import url('tobe/about/about-layout.less');			
+/*@import url('tobe/about/about-layout.less');*/			
 @import url('tobe/about/about-sidebar.less');		
 @import url('tobe/about/about-log.less');			
 @import url('tobe/about/about-join.less');			
