--- a/template/about/forum/forumdisplay.htm
+++ b/template/about/forum/forumdisplay.htm
@@ -1,16 +1,13 @@
-<!--{template common/header}-->
+<!--{template common/header_m}-->
 
 <!-- 
  * Project: ABOUT
  * Creat: iRuxu 2015.8.23
- * Update : iRuxu 2015.8.23
+ * Update : iRuxu 2016.4.17
  -->
 
-<!-- jx3pve:code -->
-<script src="http://js.jx3pve.com/js/page/pvx-about.js"></script>
-
 <!-- jx3pve:pve -->
-<div class="listpage-container pvx-container about-container pvx-listpage about-listpage">
+<div class="listpage-container system-container log-container log-listpage">
 
 	<!-- dz:style & js -->
 	<!--{if $_G['forum']['ismoderator']}-->
@@ -536,5 +533,7 @@
 	<!--[diy=diy3]--><div id="diy3" class="area"></div><!--[/diy]-->
 	
 </div><!-- container -->
+
+<!--{subtemplate forum/footer}-->
 
 <!--{template common/footer}-->
