--- a/template/about/forum/viewthread.htm
+++ b/template/about/forum/viewthread.htm
@@ -1,9 +1,9 @@
-<!--{template common/header}-->
+<!--{template common/header_m}-->
 
 <!-- 
  * Project: ABOUT
  * Creat: iRuxu 2015.8.23
- * Update : iRuxu 2015.8.23
+ * Update : iRuxu 2016.4.17
  -->
 
 <!-- jx3pve:code -->
@@ -548,5 +548,7 @@
 		</script>
 
 </div><!-- container -->
+
+<!--{subtemplate forum/footer}-->
 
 <!--{template common/footer}-->
