--- a/css/system/system.less
+++ b/css/system/system.less
@@ -1,12 +1,20 @@
 @import url('../public/base.less');		//函数
 @import url('../public/path.less');		//路径
 @import url('../global/color.less');	//配色
+@import url('../global/var.less');		//尺寸
+
+.wp{.w(@wp);}
 
 .system-container{
 }
 
-#pt{
-	margin-bottom:10px;
+.system-route{
+	
+}
+
+.system-main{
+	.pr;
+	padding:10px 0;
 }
 
 .system-title{
@@ -17,7 +25,43 @@
 .ua-responsive .screen-s .system-title{.none;}
 
 
+.system-sidebar{
+	.pa;.lt(0,0);
+	.w(@sd2);
+
+	ul{
+		padding:10px;
+	}
+	li{
+		//border-bottom:1px solid #eee;
+	}
+	a{
+		.db;
+		.fz(12px,20px);
+		padding:6px 10px;
+		i{
+			.dbi;.y;margin-right:5px;
+			.size(15px);
+			background:url('@{url}header/icons2.png') no-repeat -168px -4px;
+		}
+		&.on{
+			color:@blue-link;
+			.bold;
+			i{background-position:-168px -24px;}
+		}
+	}
+}
+
+.system-content{
+	margin-left:@sd2;
+}
+
+.ua-responsive .screen-s .system-sidebar{.none;}
+.ua-responsive .screen-s .system-content{margin-left:0;}
+
+
 //网站地图
+.sitemap-container #pt{margin-bottom:10px !important;}
 .m-sitemap-block{
 	margin-bottom:10px;
 	padding-left:80px;
@@ -52,100 +96,3 @@
 	}
 }
 
-//友情链接
-.m-links-list{
-	.clearfix;
-	.color(#222,@blue-link,@blue-link);
-	ul{
-		.fl;margin:0 20px;
-	}
-	li{
-		.fz(12px,2.5);
-		list-style:square;
-	}
-	a:hover{
-		text-decoration:underline;
-	}
-}
-.m-links-add{
-	margin-bottom:20px;
-}
-
-//版权声明&免责声明
-.copyright-container,.disclaimer-container{
-	padding-bottom:20px;
-	.m-title{
-		.fz(20px,2.5);
-		//border-bottom:1px dotted #ddd;
-		.x;
-	}
-	.m-content{
-		.fz(12px,2);
-		p{text-indent:24px;margin-bottom:5px;}
-	}
-}
-.ua-responsive .screen-s{
-	.copyright-container,.disclaimer-container{
-		.m-title{
-			.none;
-		}
-	}
-}
-
-//推送头条
-.push-container{
-}
-.m-push-primary{
-	.fz(12px,28px);
-	.dopt{
-		margin-bottom:10px;
-	}
-	.z{
-		margin:0 10px 0 5px!important;
-		.w(auto)  !important;
-	}
-	.px{
-		.h(20px);
-		padding:2px 10px;
-	}
-	.news_tsbtn{
-		margin-left:50px;
-	}
-}
-.m-push-content{
-	.fz(12px,2.2);
-	padding:10px;
-	border:1px dashed #ddd;
-	ol{list-style:decimal;}
-}
-.m-push-tips{
-	.alert_btnleft{.none;}
-	.m-push-tips-success{
-		a{.color(@blue-link);}
-		a:hover{
-			text-decoration:underline;
-		}
-	}
-}
-.ua-responsive .screen-s{
-	.m-push-primary{
-		.z{margin-left:0 !important;}
-		.px{
-			.db;
-		    width: 100% !important;
-			box-sizing: border-box;
-			padding:14px 10px;
-			line-height:24px;
-		}
-		.news_tsbtn{
-			margin-left:0;
-			.w(100%);
-			.fzlh(14px,34px);
-			box-sizing:border-box;
-		}
-	}
-}
-
-#portal-page .alert_btnleft{
-	//.none;
-}
