--- a/template/yylmacro/portal/portal_topic_copyright.htm
+++ b/template/yylmacro/portal/portal_topic_copyright.htm
@@ -1,5 +1,6 @@
 <!--{subtemplate common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/about/about.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
 	<div class="i-header-title">版权声明</div>
@@ -9,28 +10,44 @@
 
 		<div id="pt" class="system-route bm cl">
 			<div class="z">
-				<a href="./" class="nvhm" title="{lang homepage}">$_G['setting']['bbname']</a> <em>&rsaquo;</em>
-				版权声明
+				<a href="./" class="nvhm" title="{lang homepage}">$_G['setting']['bbname']</a>
+				<em>&rsaquo;</em><a href="./about">关于我们</a>
+				<em>&rsaquo;</em>版权声明
 			</div>
 		</div>
 
-		<h1 class="m-title">版权声明</h1>
+		<div class="system-main">
 
-		<div class="m-content">
+			<div class="system-sidebar">
+				<!--{subtemplate public/about_sidebar}-->
+			</div>
 
-			<p>第一条 所有来源标注为“JX3PVE独家首发”内容版权均为本站所有，若您需要引用、转载，需要电邮至admin@jx3pve.com进行授权申请，在申请受理并支付相关稿费后，方可进行转载，并需要在文头注明来源及原文链接。</p>
+			<div class="system-content">
 
-			<p>第二条 本站所有含有评分“水晶”积分的作品为付费有偿作品，若您需要引用、转载，需要电邮至admin@jx3pve.com进行授权申请，在申请受理后方可进行转载，并需要在文头注明来源及原文链接。</p>
+				<div class="m-about-copyright">
 
-			<p>第三条 本站所有签约作者（作者个人信息认证栏中有签约作者标识）发布的作品，若您需要引用、转载，需要电邮至admin@jx3pve.com进行授权申请，在申请受理后方可在文头注明来源、原文链接及作者名称进行转载。</p>
+					<h1 class="m-title">版权声明</h1>
 
-			<p>第四条 无以上特殊标识或记号的本站其它资源，您只需要获得原作者授权后可自由转载。以上条件均存在时以靠前的条件为准。</p>
+					<div class="m-content">
 
-			<p>第五条 未经本站允许，不得盗链、盗用本站资源；不得复制或仿造本网站，不得在非JX3PVE(www.jx3pve.com)所属的服务器上建立镜像。</p>
+						<p>第一条 所有来源标注为“JX3PVE独家首发”内容版权均为本站所有，若您需要引用、转载，需要电邮至admin@jx3pve.com进行授权申请，在申请受理并支付相关稿费后，方可进行转载，并需要在文头注明来源及原文链接。</p>
 
-			<p>第六条 JX3PVE(www.jx3pve.com)对其自行开发的或和他人共同开发的所有内容、技术手段和服务拥有全部知识产权，对其发行的或与合作团队或个人共同发行的包括但不限于产品或服务的全部内容及JX3PVE(www.jx3pve.com)网站上的材料拥有版权等知识产权，受法律保护。未经本站书面许可，任何单位及个人不得以任何方式或理由对上述产品、服务、信息、材料的任何部分进行使用、复制、修改、抄录、传播或与其它产品捆绑使用、销售。</p>
+						<p>第二条 本站所有含有评分“水晶”积分的作品为付费有偿作品，若您需要引用、转载，需要电邮至admin@jx3pve.com进行授权申请，在申请受理后方可进行转载，并需要在文头注明来源及原文链接。</p>
 
-			<p>凡侵犯本站版权等知识产权的，本站必依法追究其法律责任，特此郑重法律声明！</p>
+						<p>第三条 本站所有签约作者（作者个人信息认证栏中有签约作者标识）发布的作品，若您需要引用、转载，需要电邮至admin@jx3pve.com进行授权申请，在申请受理后方可在文头注明来源、原文链接及作者名称进行转载。</p>
+
+						<p>第四条 无以上特殊标识或记号的本站其它资源，您只需要获得原作者授权后可自由转载。以上条件均存在时以靠前的条件为准。</p>
+
+						<p>第五条 未经本站允许，不得盗链、盗用本站资源；不得复制或仿造本网站，不得在非JX3PVE(www.jx3pve.com)所属的服务器上建立镜像。</p>
+
+						<p>第六条 JX3PVE(www.jx3pve.com)对其自行开发的或和他人共同开发的所有内容、技术手段和服务拥有全部知识产权，对其发行的或与合作团队或个人共同发行的包括但不限于产品或服务的全部内容及JX3PVE(www.jx3pve.com)网站上的材料拥有版权等知识产权，受法律保护。未经本站书面许可，任何单位及个人不得以任何方式或理由对上述产品、服务、信息、材料的任何部分进行使用、复制、修改、抄录、传播或与其它产品捆绑使用、销售。</p>
+
+						<p>凡侵犯本站版权等知识产权的，本站必依法追究其法律责任，特此郑重法律声明！</p>
+
+					</div>
+
+				</div>
+			</div>
 
 		</div>
 
