--- a/template/yylmacro/portal/portal_topic_disclaimer.htm
+++ b/template/yylmacro/portal/portal_topic_disclaimer.htm
@@ -1,5 +1,6 @@
 <!--{subtemplate common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/about/about.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
 	<div class="i-header-title">免责声明</div>
@@ -9,48 +10,65 @@
 
 		<div id="pt" class="system-route bm cl">
 			<div class="z">
-				<a href="./" class="nvhm" title="{lang homepage}">$_G['setting']['bbname']</a> <em>&rsaquo;</em>
-				免责声明
+				<a href="./" class="nvhm" title="{lang homepage}">$_G['setting']['bbname']</a>
+				<em>&rsaquo;</em><a href="./about">关于我们</a>
+				<em>&rsaquo;</em>免责声明
 			</div>
 		</div>
 
-		<h1 class="m-title">免责声明</h1>
 
-		<div class="m-content">
+		<div class="system-main">
 
-			<p>访问者在接受本网站服务之前，请务必仔细阅读本条款并同意本声明。访问者访问本网站的行为以及通过各类方式利用本网站的行为，都将被视作是对本声明全部内容的无异议的认可；如有异议，请立即跟本网站协商，并取得本网站的书面同意意见。</p>
+			<div class="system-sidebar">
+				<!--{subtemplate public/about_sidebar}-->
+			</div>
 
-			<p>第一条 访问者在从事与本网站相关的所有行为（包括但不限于访问浏览、利用、转载、宣传介绍）时，必须以善意且谨慎的态度行事；访问者不得故意或者过失的损害或者弱化本网站的各类合法权利与利益，不得利用本网站以任何方式直接或者间接的从事违反中国法律、国际公约以及社会公德的行为，且访问者应当恪守下述承诺：<br/>
-			1、传输和利用信息符合中国法律、国际公约的规定、符合公序良俗；<br/>
-		　　2、不将本网站以及与之相关的网络服务用作非法用途以及非正当用途；<br/>
-		　　3、不干扰和扰乱本网站以及与之相关的网络服务；<br/>
-		　　4、遵守与本网站以及与之相关的网络服务的协议、规定、程序和惯例等。<br/>
-			违反以上条例，本站有权利单方面进行包括不限于封IP，封号，停止服务等处理。
-			</p>
+			<div class="system-content">
 
-			<p>第二条 访问者在本网站注册时提供的一些个人资料，本网站除您本人同意及第三条规定外不会将用户的任何资料以任何方式泄露给任何一方。</p>
+				<div class="m-about-disclaimer">
 
-			<p>第三条 当政府部门、司法机关等依照法定程序要求本网站披露个人资料时，本网站将根据执法单位之要求或为公共安全之目的提供个人资料。在此情况下之任何披露，本网站均得免责。</p>
+					<h1 class="m-title">免责声明</h1>
 
-			<p>第四条 由于用户将个人密码告知他人或与他人共享注册账户，由此导致的任何个人资料泄露，本网站不负任何责任。</p>
+					<div class="m-content">
 
-			<p>第五条 本网站内容仅代表作者本人的观点，不代表本网站的观点和看法，与本网站立场无关，相关责任作者自负。</p>
+						<p>访问者在接受本网站服务之前，请务必仔细阅读本条款并同意本声明。访问者访问本网站的行为以及通过各类方式利用本网站的行为，都将被视作是对本声明全部内容的无异议的认可；如有异议，请立即跟本网站协商，并取得本网站的书面同意意见。</p>
 
-			<p>第六条 本网站所刊载的各类形式（包括但不仅限于文字、图片、图表）的作品仅供参考使用，并不代表本网站同意其说法或描述，仅为提供更多信息，也不构成任何投资建议。对于访问者根据本网站提供的信息所做出的一切行为，除非另有明确的书面承诺文件，否则本网站不承担任何形式的责任。</p>
+						<p>第一条 访问者在从事与本网站相关的所有行为（包括但不限于访问浏览、利用、转载、宣传介绍）时，必须以善意且谨慎的态度行事；访问者不得故意或者过失的损害或者弱化本网站的各类合法权利与利益，不得利用本网站以任何方式直接或者间接的从事违反中国法律、国际公约以及社会公德的行为，且访问者应当恪守下述承诺：<br/>
+						1、传输和利用信息符合中国法律、国际公约的规定、符合公序良俗；<br/>
+					　　2、不将本网站以及与之相关的网络服务用作非法用途以及非正当用途；<br/>
+					　　3、不干扰和扰乱本网站以及与之相关的网络服务；<br/>
+					　　4、遵守与本网站以及与之相关的网络服务的协议、规定、程序和惯例等。<br/>
+						违反以上条例，本站有权利单方面进行包括不限于封IP，封号，停止服务等处理。
+						</p>
 
-			<p>第七条 网站不保证资源的准确性、安全性和完整性，请您在阅读、下载及使用过程中自行确认，本站亦不承担上述资源对您或您的网站造成的任何形式的损失或伤害。</p>
+						<p>第二条 访问者在本网站注册时提供的一些个人资料，本网站除您本人同意及第三条规定外不会将用户的任何资料以任何方式泄露给任何一方。</p>
 
-			<p第八条 当本网站以链接形式推荐其他网站内容时，本网站并不对这些网站或资源的可用性负责，且不保证从这些网站获取的任何内容、产品、服务或其他材料的真实性、合法性，对于任何因使用或信赖从此类网站或资源上获取的内容、产品、服务或其他材料而造成(或声称造成)的任何直接或间接损失，本网站均不承担任何责任。</p>
+						<p>第三条 当政府部门、司法机关等依照法定程序要求本网站披露个人资料时，本网站将根据执法单位之要求或为公共安全之目的提供个人资料。在此情况下之任何披露，本网站均得免责。</p>
 
-			<p>第九条 本网站有部分内容来自互联网，如无意中侵犯了哪个媒体、公司、企业或个人等的知识产权，请来电或致函告之，本网站将在规定时间内给予删除等相关处理，若有涉及版权费等问题，请及时提供相关证明等材料并与我们联系，通过友好协商公平公正原则处理纠纷。</p>
+						<p>第四条 由于用户将个人密码告知他人或与他人共享注册账户，由此导致的任何个人资料泄露，本网站不负任何责任。</p>
 
-			<p>第十条 本站中玩家自行获取原作授权进行转载时，或原作者自行多平台发布时，本站不涉及任何侵权问题，任何时候本站发放“水晶”积分奖励时可视为已对该作品支付相关版权费用。</p>
+						<p>第五条 本网站内容仅代表作者本人的观点，不代表本网站的观点和看法，与本网站立场无关，相关责任作者自负。</p>
 
-			<p>第十一条 本站为公益性非盈利目的网站（仅部分业务用于硬设维护与作者奖励），旨在为剑三玩家搭建资源互享平台。<br>本站所有信息均为玩家发布，本站不代表任何立场，所有玩家发布的收费作品与本站无任何牵连关系，本站亦未收取任何费用，请广大玩家注意个人财产安全，本站鼓励作者发布免费开源资源。<br>
-			另也请广大玩家尊重原作者劳动成果，多一份赞美少一份诋毁，共同维护良好分享环境，感谢所有无私奉献的大大们。<br>
-			本站玩家刊注独家首发资源与有偿内容，未经本站与作者授权许可，禁止转载，谢谢合作。</p>
+						<p>第六条 本网站所刊载的各类形式（包括但不仅限于文字、图片、图表）的作品仅供参考使用，并不代表本网站同意其说法或描述，仅为提供更多信息，也不构成任何投资建议。对于访问者根据本网站提供的信息所做出的一切行为，除非另有明确的书面承诺文件，否则本网站不承担任何形式的责任。</p>
 
-			<p>第十二条以上声明内容的最终解释权归JX3PVE网站所有。</p>
+						<p>第七条 网站不保证资源的准确性、安全性和完整性，请您在阅读、下载及使用过程中自行确认，本站亦不承担上述资源对您或您的网站造成的任何形式的损失或伤害。</p>
+
+						<p第八条 当本网站以链接形式推荐其他网站内容时，本网站并不对这些网站或资源的可用性负责，且不保证从这些网站获取的任何内容、产品、服务或其他材料的真实性、合法性，对于任何因使用或信赖从此类网站或资源上获取的内容、产品、服务或其他材料而造成(或声称造成)的任何直接或间接损失，本网站均不承担任何责任。</p>
+
+						<p>第九条 本网站有部分内容来自互联网，如无意中侵犯了哪个媒体、公司、企业或个人等的知识产权，请来电或致函告之，本网站将在规定时间内给予删除等相关处理，若有涉及版权费等问题，请及时提供相关证明等材料并与我们联系，通过友好协商公平公正原则处理纠纷。</p>
+
+						<p>第十条 本站中玩家自行获取原作授权进行转载时，或原作者自行多平台发布时，本站不涉及任何侵权问题，任何时候本站发放“水晶”积分奖励时可视为已对该作品支付相关版权费用。</p>
+
+						<p>第十一条 本站为公益性非盈利目的网站（仅部分业务用于硬设维护与作者奖励），旨在为剑三玩家搭建资源互享平台。<br>本站所有信息均为玩家发布，本站不代表任何立场，所有玩家发布的收费作品与本站无任何牵连关系，本站亦未收取任何费用，请广大玩家注意个人财产安全，本站鼓励作者发布免费开源资源。<br>
+						另也请广大玩家尊重原作者劳动成果，多一份赞美少一份诋毁，共同维护良好分享环境，感谢所有无私奉献的大大们。<br>
+						本站玩家刊注独家首发资源与有偿内容，未经本站与作者授权许可，禁止转载，谢谢合作。</p>
+
+						<p>第十二条以上声明内容的最终解释权归JX3PVE网站所有。</p>
+
+					</div>
+				</div>
+
+			</div>
 
 		</div>
 
