--- a/template/yylmacro/portal/portal_topic_sitemap.htm
+++ b/template/yylmacro/portal/portal_topic_sitemap.htm
@@ -15,9 +15,17 @@
 		</div>
 
 		<div class="m-sitemap-block">
-			<h2>网站栏目</h2>
+			<h2>门户系统</h2>
 			<ul>
 				<li><a href="./">首页</a></li>
+				<li><a href="./push">推送头条</a></li>
+				<li><a href="./news/">历史头条<span>(PC版)</span></a></li>
+			</ul>
+		</div>
+
+		<div class="m-sitemap-block">
+			<h2>网站栏目</h2>
+			<ul>
 				<li><a href="./macro">宏库</a></li>
 				<li><a href="./tool">工具</a></li>
 				<li><a href="./app">应用</a></li>
@@ -34,21 +42,80 @@
 		</div>
 
 		<div class="m-sitemap-block">
-			<h2>用户系统</h2>
-			<ul>
-				<li><a href="./faq">FAQ</a></li>
-				<li><a href="./feedback">反馈中心</a></li>
-				<li><a href="./push">推送头条</a></li>
-			</ul>
-		</div>
-
-		<div class="m-sitemap-block">
 			<h2>专题专辑</h2>
 			<ul>
 				<li><a href="./fb">副本专题<span>(PC版)</span></a></li>
 			</ul>
 		</div>
-		
+
+		<div class="m-sitemap-block">
+			<h2>停更栏目</h2>
+			<ul>
+				<li><a href="./cloud">超级宏官网<span>(停更)</span></a></li>
+				<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<span>(停更)</span></a></li>
+				<li><a href="./group.php">群组<span>(停更)</span></a></li>
+			</ul>
+		</div>
+
+		<div class="m-sitemap-block">
+			<h2>用户系统</h2>
+			<ul>
+				<li><a href="./login">登录</a></li>
+				<li><a href="./register">注册</a></li>
+				<li><a href="./misc.php?mod=buyinvitecode">邀请码</a></li>
+				<li><a href="./member.php?mod=logging&action=login">找回密码</a></li>
+			</ul>
+			<ul>
+				<li><a href="./home.php?mod=spacecp&ac=profile&op=password">修改密码邮箱</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=plugin&op=profile&id=k_gaiming:k_gaiming">修改用户名</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=avatar">设置头像</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=profile">详细资料</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=profile&op=verify">认证中心</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=invite">邀请码</a></li>
+			</ul>
+			<ul>
+				<li><a href="./http://www.jx3pve.com/home.php?mod=spacecp&ac=plugin&id=qqconnect:spacecp">QQ绑定</a></li>
+				<li><a href="./http://www.jx3pve.com/home.php?mod=spacecp&ac=plugin&id=mpage_weibo:bind">微博绑定</a></li>
+				<li><a href="./http://www.jx3pve.com/wechat-bind.html">微信绑定</a></li>
+			</ul>
+			<ul>
+				<li><a href="./buy">充值</a></li>
+				<li><a href="./vip">VIP会员</a></li>
+				<li><a href="./gift">积分兑换</a></li>
+			</ul>
+			<ul>
+				<li><a href="./home.php">个人中心</a></li>
+				<li><a href="./home.php?mod=task">任务中心</a></li>
+				<li><a href="./home.php?mod=medal">勋章中心</a></li>
+				<li><a href="./home.php?mod=magic">道具中心</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=promotion">访问推广</a></li>
+			</ul>
+			<ul>
+				<li><a href="./home.php?mod=space">个人空间</a></li>
+				<li><a href="./home.php?mod=space&do=pm">消息</a></li>
+				<li><a href="./luckypost-luckypost.html">际遇</a></li>
+				<li><a href="./home.php?mod=space&do=blog">日志</a></li>
+				<li><a href="./home.php?mod=space&do=album">相册</a></li>
+				<li><a href="./home.php?mod=space&do=share">分享</a></li>
+				<li><a href="./home.php?mod=space&do=doing">记录</a></li>
+				<li><a href="./home.php?mod=follow">广播</a></li>
+			</ul>
+			<ul>
+				<li><a href="./forum.php?mod=guide&view=my&type=thread">我的帖子</a></li>
+				<li><a href="./home.php?mod=space&do=favorite&view=me">我的收藏</a></li>
+				<li><a href="./home.php?mod=space&do=friend">我的好友</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=privacy">隐私设置</a></li>
+			</ul>
+		</div>
+
+		<div class="m-sitemap-block">
+			<h2>帮助系统</h2>
+			<ul>
+				<li><a href="./faq">FAQ</a></li>
+				<li><a href="./feedback">反馈中心</a></li>
+			</ul>
+		</div>
+
 		<div class="m-sitemap-block">
 			<h2>网站系统</h2>
 			<ul>
@@ -57,31 +124,26 @@
 				<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
 			</ul>
 			<ul>
-				<li><a href="./">更新日志</a></li>
-				<li><a href="./news/">历史头条<span>(PC版)</span></a></li>
 				<li><a href="./misc.php?mod=stat">站点统计<span>(PC版)</span></a></li>
 				<li><a href="./archiver">Archiver</a></li>
-			</ul>
-			<ul>
-				<li><a href="./">网站简介</a></li>
-				<li><a href="./portal.php?mod=topic&topicid=113">版权声明</a></li>
-				<li><a href="./portal.php?mod=topic&topicid=114">免责声明</a></li>
-				<li><a href="./">管理团队</a></li>
-				<li><a href="./">加入我们</a></li>
-				<li><a href="./">合作联系</a></li>
-				<li><a href="./portal.php?mod=topic&topicid=115">友情链接</a></li>
 			</ul>
 		</div>
 
 		<div class="m-sitemap-block">
-			<h2>已下架</h2>
+			<h2>关于我们</h2>
 			<ul>
-				<li><a href="./cloud">超级宏官网<span>(已下架)</span></a></li>
-				<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<span>(已下架)</span></a></li>
-				<li><a href="./group.php">群组<span>(已下架)</span></a></li>
+				<li><a href="./portal.php?mod=topic&topicid=116">网站简介</a></li>
+				<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">更新日志</a></li>
+				<li><a href="./portal.php?mod=topic&topicid=113">版权声明</a></li>
+				<li><a href="./portal.php?mod=topic&topicid=114">免责声明</a></li>
+				<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=25">管理团队</a></li>
+				<li><a href="./portal.php?mod=topic&topicid=64">签约作者</a></li>
+				<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=26">加入我们</a></li>
+				<li><a href="./portal.php?mod=topic&topicid=115">友情链接</a></li>
+				<li><a href="./portal.php?mod=topic&topicid=65">合作联系</a></li>
 			</ul>
 		</div>
-
+		
 	</div>
 </div>
 <!--{subtemplate common/footer}-->
