--- a/template/yylmacro/portal/portalcp_article.htm
+++ b/template/yylmacro/portal/portalcp_article.htm
@@ -1,5 +1,5 @@
 <!--{template common/header}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/push.css" type="text/css" />
 
 <!--{if $op == 'delete'}-->
 
