--- a/template/yylmacro/portal/portalcp_pushnews.htm
+++ b/template/yylmacro/portal/portalcp_pushnews.htm
@@ -1,5 +1,5 @@
 <!--{template common/header_m}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/push.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
 	<div class="i-header-title">推送头条</div>
