列表页重构1/2  单页重构1/2

--- a/css/about/about.less
+++ b/css/about/about.less
@@ -8,6 +8,11 @@
 @import url('text.less');
 @import url('links.less');
 @import url('contact.less');
+@import url('author.less');
+
+@import url('log.less');
+@import url('member.less');
+@import url('join.less');
 
 .system-main{
 	min-height:308px;
