--- a/css/common.less
+++ b/css/common.less
@@ -6,11 +6,18 @@
 @import url('global/font.less');		//默认字体
 @import url('global/layout.less');		//默认布局
 
+@import url('ui/button.less');			//按钮
 @import url('ui/form.less');			//表单
 @import url('ui/route.less');			//面包屑
 @import url('ui/tab.less');				//tab卡
 
 @import url('common/header/header.less');		//公共头
 @import url('common/footer/footer.less');		//公共底部
+
+@import url('widget/w-category.less');		//主题分类
+@import url('widget/w-order.less');			//主题排序
+@import url('widget/w-filter.less');		//主题筛选
+@import url('widget/w-pages.less');			//分页
+
 
 @import url('portal/group.less');		//群组
