--- a/css/global.less
+++ b/css/global.less
@@ -80,11 +80,11 @@
 @import url('tobe/custom/c-replyer.less');			//回复人
 
 @import url('tobe/custom/w-route.less');				//路径面包屑
-@import url('tobe/custom/w-pages.less');				//分页
+/*@import url('tobe/custom/w-pages.less');				//分页*/
 
-@import url('tobe/custom/w-category-nav.less');		//分类导航
-@import url('tobe/custom/w-order.less');				//排序
-@import url('tobe/custom/w-filter.less');			//字段筛选
+/*@import url('tobe/custom/w-category-nav.less');		//分类导航*/
+/*@import url('tobe/custom/w-order.less');				//排序*/
+/*@import url('tobe/custom/w-filter.less');			//字段筛选*/
 @import url('tobe/custom/s-filter.less');			//侧边栏筛选(font)
 
 @import url('tobe/custom/w-lastedit-th.less');		//最后更新头
@@ -250,14 +250,14 @@
 ------------------------------------------*/
 @import url('tobe/public/base-bak.less');			
 /*@import url('tobe/about/about-layout.less');*/			
-@import url('tobe/about/about-sidebar.less');		
+/*@import url('tobe/about/about-sidebar.less');		
 @import url('tobe/about/about-log.less');			
 @import url('tobe/about/about-join.less');			
 @import url('tobe/about/about-member.less');				
 @import url('tobe/about/about-index.less');	
 @import url('tobe/about/about-contact.less');	
 @import url('tobe/about/about-author.less');	
-@import url('tobe/about/about.less');	
+@import url('tobe/about/about.less');*/	
 
 
 /*index 首页
