--- a/css/portal/push.less
+++ b/css/portal/push.less
@@ -3,6 +3,9 @@
 @import url('../global/color.less');	//配色
 
 .push-container{
+	#pt{
+		margin-bottom:10px;
+	}
 }
 .m-push-primary{
 	.fz(12px,28px);
