--- a/template/about/forum/footer.htm
+++ b/template/about/forum/footer.htm
@@ -1,1 +1,5 @@
+			</div><!-- content -->
+		</div><!-- main -->
+	</div><!-- wp -->
+</div><!-- container -->
 <script src="http://js.jx3pve.com/js/page/page-about.min.js"></script>
