--- a/css/ui/form.less
+++ b/css/ui/form.less
@@ -1,30 +1,4 @@
-//按钮
-.pn,.pnc{
-    color: #fff!important;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.5);
-    background: #1472cf;
-    background: -webkit-linear-gradient(top,#1d7fe2,#0865c2);
-    background: linear-gradient(to bottom,#1d7fe2,#0865c2);
-    border: 1px solid #0D6EB8;
-    box-shadow: 0 1px 0 rgba(255,255,255,.2) inset,0 1px 0 rgba(0,0,0,.2);
-    //padding-bottom:2px;
-
-    text-decoration: none!important;
-    vertical-align: middle;
-    display: inline-block;
-    _display: inline;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 3px;
-    white-space: nowrap;
-    //box-sizing: border-box;
-}
-
-.pnc:active,.pn:active{
-    background-position:0 0;
-}
-a.pnc{background-position:0 0;}
-
+//其它元素
 .px, .ps, select,.tedt{
     border: 1px solid #ddd;
     box-shadow: 0 0 1px #ccc inset;
