--- a/template/default/forum/footer.htm
+++ b/template/default/forum/footer.htm
@@ -2,3 +2,4 @@
 		</div><!-- main -->
 	</div><!-- wp -->
 </div><!-- container -->
+<script src="http://js.jx3pve.com/js/page/page-forum.min.js"></script>
