--- a/template/default/forum/forumdisplay.htm
+++ b/template/default/forum/forumdisplay.htm
@@ -1,6 +1,6 @@
 <!--{template common/header_m}-->
-<!--{subtemplate forum/header_common}-->
 <!--{subtemplate forum/header_list}-->
+<!--{subtemplate forum/header_common}-->
 
 <!--{template forum/forumdisplay_top}-->
 <div class="boardnav">
@@ -11,4 +11,5 @@
 <!--{template forum/forumdisplay_bottom}-->
 
 <!--{subtemplate forum/footer}-->
+<!--{subtemplate forum/footer_common}-->
 <!--{template common/footer}-->
