--- a/template/default/forum/viewthread.htm
+++ b/template/default/forum/viewthread.htm
@@ -1,27 +1,13 @@
 <!--{template common/header_m}-->
-<!--{subtemplate forum/header_common}-->
 <!--{subtemplate forum/header_view}-->
+<!--{subtemplate forum/header_common}-->
 
 <div id="ct">
-
-	<!--{template public/viewthread_top}-->
-
-	<!-- dz:w-pages-top -->
-	<!--{template widget/w_pages_top_view}-->
-
-	<!-- dz:admin pop -->
-	<!--{template widget/w_adminpop}-->
-
-	<!-- dz:admin bar -->
-	<div class="w-adminbar-top">
-		<!--{template widget/w_adminbar}-->
-	</div>
-
-	<!--{hook/viewthread_beginline}-->
+	<!--{subtemplate forum/viewthread_top}-->
 	<!--{subtemplate forum/viewthread_middle}-->
-	
 	<!--{subtemplate forum/viewthread_bottom}-->
-
 </div>
+
 <!--{subtemplate forum/footer}-->
+<!--{subtemplate forum/footer_common}-->
 <!--{template common/footer}-->
