--- a/source/plugin/ljdaka/template/daka.htm
+++ b/source/plugin/ljdaka/template/daka.htm
@@ -1,7 +1,7 @@
 <!--{block return}-->
 <!--{if $this->check&&!empty($this->xianshi)}-->
-<a class="c-header-sign" href="plugin.php?id=ljdaka:ranklist"><i class="sign"></i>{lang ljdaka:daka11}</a>
+<a class="c-header-sign" href="plugin.php?id=ljdaka:ranklist"><i></i>{lang ljdaka:daka11}</a>
 <!--{else}-->
-<a class="c-header-sign" href="#" onclick='showWindow("ljdaka","plugin.php?id=ljdaka:daka&action=msg&formhash={FORMHASH}");' id="c-daka-link"><i class="sign"></i>签到</a>
+<a class="c-header-sign" href="#" onclick='showWindow("ljdaka","plugin.php?id=ljdaka:daka&action=msg&formhash={FORMHASH}");' id="c-daka-link"><i></i>签到</a>
 <!--{/if}-->
 <!--{/block}-->
