--- a/template/about/forum/header_list.htm
+++ b/template/about/forum/header_list.htm
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="http://css.jx3pve.com/css/forum.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
 	<div class="i-header-title"><!--{echo $_G['forum']['threadsorts']['types'][$_GET['sortid']]}--></div>
