--- a/template/about/forum/header_post.htm
+++ b/template/about/forum/header_post.htm
@@ -2,7 +2,7 @@
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
 	<div class="i-header-title"><!--{echo $_G['forum']['threadsorts']['types'][$_GET['sortid']]}--></div>
 </header>
-<div class="listpage-container system-container">
+<div class="postpage-container system-container">
 	<div class="wp">
 		<div id="pt" class="bm cl">
 			<div class="z">
