--- a/template/about/forum/header_view.htm
+++ b/template/about/forum/header_view.htm
@@ -1,8 +1,9 @@
+<link rel="stylesheet" href="http://css.jx3pve.com/css/forum.css" type="text/css" />
 <header class="i-header">
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
 	<div class="i-header-title"><!--{echo $_G['forum']['threadsorts']['types'][$_G['forum_thread']['sortid']]}--></div>
 </header>
-<div class="listpage-container system-container">
+<div class="viewpage-container system-container">
 	<div class="wp">
 		<div id="pt" class="bm cl">
 			<div class="z">
