--- a/template/default/forum/viewthread_middle.htm
+++ b/template/default/forum/viewthread_middle.htm
@@ -1,167 +1,13 @@
-<!-- dz:postlist -->
-<div class="pvx-postbox pl bm" id="postlist">
+<!--{hook/viewthread_beginline}-->
+<div id="postlist" class="pl bm">
 
-	<!-- jx3pve:pvx-title -->
-	<!--{subtemplate jx3pve/c_portal_title}-->
+	<div class="c-forum-top">
+		<!-- jx3pve:c_forum_title -->
+		<!--{subtemplate component/c_forum_title}-->
 
-	<table class="none" cellspacing="0" cellpadding="0">
-		<tr>
-			<!--{if !$close_leftinfo}-->
-			<td class="pls ptn pbn">
-				<!--{if $_G['page'] > 1}-->
-				<div id="tath" class="cl">
-					<!--{if $_G[forum_thread][authorid] && $_G[forum_thread][author]}-->
-						<a href="home.php?mod=space&uid=$_G[forum_thread][authorid]" title="$_G[forum_thread][author]"><!--{avatar($_G[forum_thread][authorid],small)}--></a>
-						{lang thread_author}: <a href="home.php?mod=space&uid=$_G[forum_thread][authorid]" title="$_G[forum_thread][author]">$_G[forum_thread][author]</a>
-					<!--{else}-->
-						{lang thread_author}:
-						<!--{if $_G['forum']['ismoderator']}-->
-							<a href="home.php?mod=space&uid=$_G[forum_thread][authorid]">{lang anonymous}</a>
-						<!--{else}-->
-							{lang anonymous}
-						<!--{/if}-->
-					<!--{/if}-->
-				</div>
-				<!--{else}-->
-
-				<div class="hm ptn">
-					<span class="xg1">{lang show}:</span> <span class="xi1">$_G[forum_thread][views]</span><span class="pipe">|</span><span class="xg1">{lang reply}:</span> <span class="xi1">$_G[forum_thread][allreplies]</span>
-				</div>
-				<!--{/if}-->
-			</td>
-			<!--{/if}-->
-			<td class="plc ptm pbn vwthd">
-				<!--{if !IS_ROBOT}-->
-					<div class="y">
-						<!--{if $post['invisible'] == 0}--><a href="forum.php?mod=viewthread&action=printable&tid=$_G[tid]" title="{lang thread_printable}" target="_blank"><img src="{IMGDIR}/print.png" alt="{lang thread_printable}" class="vm" /></a>
-						<!--{/if}-->
-						<a href="forum.php?mod=redirect&goto=nextoldset&tid=$_G[tid]" title="{lang last_thread}"><img src="{IMGDIR}/thread-prev.png" alt="{lang last_thread}" class="vm" /></a>
-						<a href="forum.php?mod=redirect&goto=nextnewset&tid=$_G[tid]" title="{lang next_thread}"><img src="{IMGDIR}/thread-next.png" alt="{lang next_thread}" class="vm" /></a>
-					</div>
-				<!--{/if}-->
-				<!--{if $_G['setting']['close_leftinfo_userctrl']}-->
-					<span class="xg1 side_btn">
-					<!--{if !$close_leftinfo}-->
-						<a onclick="setcookie('close_leftinfo', 1);location.reload();" title="{lang collapse_the_left}" class="btn_s_close" href="javascript:;"><img src="{IMGDIR}/control_l.png" alt="{lang collapse_the_left}" class="vm" /></a>
-					<!--{else}-->
-						<a onclick="setcookie('close_leftinfo', 2);location.reload();" title="{lang open_the_left}" class="btn_s_open" href="javascript:;"><img src="{IMGDIR}/control_r.png" alt="{lang open_the_left}" class="vm" /></a>
-					<!--{/if}-->
-					</span>
-				<!--{/if}-->
-				<h1 class="ts">
-					<span class="m-count">
-						$_G[forum_thread][allreplies] / $_G[forum_thread][views]
-					</span>
-					
-				</h1>
-				<span class="xg1">
-					<!--{if $_G['setting']['threadhidethreshold'] && $_G['forum_thread']['hidden'] >= $_G['setting']['threadhidethreshold']}-->						
-						<!--{if $_G['forum_thread']['authorid'] == $_G['uid']}--><a class="psave" id="hiderecover" title="{lang hiderecover_tips}" href="forum.php?mod=misc&action=hiderecover&tid=$_G[tid]&formhash={FORMHASH}" onclick="showWindow(this.id, this.href, 'get', 0);">{lang hidden}</a><!--{else}-->({lang hidden})<!--{/if}-->
-						&nbsp;
-					<!--{/if}-->
-					<!--{if $_G['forum_thread']['recommendlevel']}-->
-						&nbsp;<img src="{IMGDIR}/recommend_$_G['forum_thread']['recommendlevel'].gif" alt="" title="{lang thread_recommend} $_G['forum_thread'][recommends]" />
-					<!--{/if}-->
-					<!--{if $_G['forum_thread'][heatlevel]}-->
-						&nbsp;<img src="{IMGDIR}/hot_$_G['forum_thread'][heatlevel].gif" alt="" title="{lang heats}: $_G['forum_thread']['heats']" />
-					<!--{/if}-->
-					<!--{if $_G['forum_thread']['closed'] == 1}-->
-						&nbsp;<img src="{IMGDIR}/locked.gif" alt="{lang close}" title="{lang close}" class="vm" />
-					<!--{/if}-->
-					<a href="forum.php?mod=viewthread&tid=$_G[tid]$fromuid" onclick="return copyThreadUrl(this, '$_G[setting][bbname]')" {if $fromuid}title="{lang share_url_copy_comment}"{/if}>[{lang share_url_copy}]</a>
-				</span>
-				<!--{hook/viewthread_title_extra}-->
-			</td>
-		</tr>
-	</table>
-
-	<!-- dz:paytips -->
-	<!--{if $_G['forum_thread']['replycredit'] > 0 || $rushreply}-->
-	<div class="pvx-paytips" id="pl_top">
-		<table cellspacing="0" cellpadding="0">
-			<tr class="ad">
-				<td class="pls"></td>
-				<td class="plc"></td>
-			</tr>
-
-			<!--{if $_G['forum_thread']['replycredit'] > 0 }-->
-			<tr>
-				<!--{if !$close_leftinfo}-->
-				<td class="pls vm ptm">
-				<!--{else}-->
-				<td class="pls ptm pbm xi1" colspan="2">
-				<!--{/if}-->
-					<img src="{IMGDIR}/thread_prize_s.png" class="hm" alt="{lang replycredit}" />
-						<strong>{$_G['forum_thread']['replycredit']} {$_G['setting']['extcredits'][$_G[forum_thread][replycredit_rule][extcreditstype]][unit]}{$_G['setting']['extcredits'][$_G[forum_thread][replycredit_rule][extcreditstype]][title]}</strong>
-				<!--{if !$close_leftinfo}-->
-				</td>
-				<td class="plc ptm pbm xi1">
-				<!--{else}-->
-				&nbsp;&nbsp;&nbsp;&nbsp;
-				<!--{/if}-->
-					{lang thread_replycredit_tips1} {lang thread_replycredit_tips2}<!--{if $_G['forum_thread']['replycredit_rule'][random] > 0}--><span class="xg1">{lang thread_replycredit_tips3}</span><!--{/if}-->
-				</td>
-			</tr>
-			<!--{if $rushreply}-->
-
-			<tr class="ad">
-				<td class="pls"></td>
-				<td class="plc"></td>
-			</tr>
-			<!--{/if}-->
-			<!--{/if}-->
-
-			<!--{if $rushreply}-->
-				<tr>
-					<!--{if !$close_leftinfo}-->
-					<td class="pls vm ptm">
-						<img src="{IMGDIR}/rushreply_s.png" class="vm" alt="{lang rushreply}" />
-						<strong>{lang rushreply}</strong>
-					</td>
-					<td class="plc ptm pbm xi1">
-					<!--{else}-->
-					<td class="plc ptm pbm xi1" colspan="2">
-						<img src="{IMGDIR}/rushreply_s.png" class="vm" alt="{lang rushreply}" />
-						<!--{/if}-->
-
-						<!--{if $rushresult[rewardfloor]}-->
-							<span class="y">
-							<!--{if $_G['uid'] == $_G['thread']['authorid'] || $_G['forum']['ismoderator']}--><a href="javascript:;" onclick="showWindow('membernum', 'forum.php?mod=ajax&action=get_rushreply_membernum&tid=$_G[tid]')" class="y pn xi2"><span>{lang thread_rushreply_statnum}</span></a><!--{/if}-->
-							<!--{if !$_GET['checkrush']}-->
-									<a href="forum.php?mod=viewthread&tid=$post[tid]&checkrush=1" rel="nofollow" class="y pn xi2"><span>{lang rushreply_view}</span></a>
-							<!--{/if}-->
-							</span>
-						<!--{/if}-->
-
-						<!--{if $rushresult[creditlimit] == ''}-->
-							{lang thread_rushreply}&nbsp;
-						<!--{else}-->
-							{lang thread_rushreply_limit} &nbsp;
-						<!--{/if}-->
-
-						<!--{if $rushresult['timer']}-->
-						<span id="rushtimer_$thread[tid]"> {lang havemore_special} <span id="rushtimer_body_$thread[tid]"></span> <script language="javascript">settimer($rushresult['timer'], 'rushtimer_body_$thread[tid]');</script>{if $rushresult['timertype'] == 'start'} {lang header_start} {else} {lang over} {/if} {lang right_special}</span>
-						<!--{/if}-->
-						<!--{if $rushresult[stopfloor]}-->
-							{lang thread_rushreply_end}$rushresult[stopfloor]&nbsp;
-						<!--{/if}-->
-						<!--{if $rushresult[rewardfloor]}-->
-							{lang thread_rushreply_floor}: $rushresult[rewardfloor]&nbsp;
-						<!--{/if}-->
-						<!--{if $rushresult[rewardfloor] && $_GET['checkrush']}-->
-							<p class="ptn">
-								<!--{if $countrushpost}-->[<strong>$countrushpost</strong>]{lang thread_rushreply_rewardnum}<!--{else}--> {lang thread_rushreply_noreward} <!--{/if}-->&nbsp;&nbsp;
-								<a href="forum.php?mod=viewthread&tid=$_G[tid]" class="xi2">{lang thread_rushreply_check_back}</a>
-							</p>
-						<!--{/if}-->
-					</td>
-				</tr>
-			<!--{/if}-->
-		</table>
+		<!-- jx3pve:c_forum_mark -->
+		<!--{subtemplate component/c_forum_mark}-->
 	</div>
-	<!--{/if}-->
-
-	<!--{hook/viewthread_title_row}-->
 
 	<!--{eval $postcount = 0;}-->
 	<!--{loop $postlist $post}-->
@@ -170,10 +16,9 @@
 		<!--{/if}-->
 
 		<!--{if $post[first]==1}-->
-		<div class="c-fli" id="post_$post[pid]" {if $_G['blockedpids'] && $post['inblacklist']}style="display:none;"{/if}>
-			<!--{subtemplate forum/viewthread_node_first}-->
-			<!-- cmt title -->
-			<div class="m-cmt-title">评论<span>COMMENT</span></div>
+		<div class="c-fli-first" id="post_$post[pid]" {if $_G['blockedpids'] && $post['inblacklist']}style="display:none;"{/if}>
+			<!--{subtemplate forum/viewthread_node}-->
+			<!--{subtemplate forum/viewthread_cmttitle}-->
 		</div>
 		<!--{else}-->
 		<div class="c-fli" id="post_$post[pid]" {if $_G['blockedpids'] && $post['inblacklist']}style="display:none;"{/if}>
@@ -192,4 +37,5 @@
 		<div id='hiddenpoststip'><a href='javascript:display_blocked_post();'>{lang other_reply_hide}</a></div>
 		<div id="hiddenposts"></div>
 	<!--{/if}-->
+
 </div>
