--- a/css/forum.less
+++ b/css/forum.less
@@ -3,6 +3,8 @@
 @import url('global/var.less');			//常量
 @import url('global/color.less');		//配色
 
+@import url('ui/button.less');			//按钮
+
 @import url('widget/w-category.less');		//主题分类
 @import url('widget/w-order.less');			//主题排序
 @import url('widget/w-filter.less');		//主题筛选
@@ -10,10 +12,16 @@
 @import url('widget/w-adminbar.less');		//管理操作条
 @import url('widget/w-adminpop.less');		//管理操作弹出面板
 
+@import url('forum/c-forum-layout.less');
 @import url('forum/c-forum-title.less');		//帖子标题
 @import url('forum/c-forum-mark.less');			//帖子追加
 @import url('widget/w-stamp.less');				//图章
 @import url('forum/c-forum-top.less');			//帖子上方
+
+@import url('forum/c-fli-header.less');		
+@import url('forum/c-fli-footer.less');		
+@import url('forum/c-fli-content.less');		
+
 
 
 @import url('portal/group.less');		//群组
