--- a/css/forum/c-forum-title.less
+++ b/css/forum/c-forum-title.less
@@ -54,7 +54,7 @@
 
 	.u-author{
 		margin-right:2px;
-		img{.size(24px);.r(24px);.y;}
+		img{.size(20px);.r(2px);.y;}
 		a{.bold;}
 		a:hover{
 			text-decoration:underline;
@@ -91,7 +91,7 @@
 		margin-left:10px;
 		i{.dbi;.y;margin-right:3px;background:url('@{url}header/icons2.png') no-repeat 0 0;}
 		&:hover{
-			color:#698ebf;
+			color:@zhblue;
 		}
 	}
 
