--- a/css/global.less
+++ b/css/global.less
@@ -75,9 +75,9 @@
 @import url('tobe/custom/u-vip.less');				//vip
 
 @import url('tobe/custom/c-star.less');				//评分模块
-@import url('tobe/custom/c-panel.less');				//操作条
-@import url('tobe/custom/c-author.less');			//楼主
-@import url('tobe/custom/c-replyer.less');			//回复人
+/*@import url('tobe/custom/c-panel.less');				//操作条*/
+/*@import url('tobe/custom/c-author.less');			//楼主
+@import url('tobe/custom/c-replyer.less');			//回复人*/
 
 @import url('tobe/custom/w-route.less');				//路径面包屑
 /*@import url('tobe/custom/w-pages.less');				//分页*/
