--- a/template/default/component/c_forum_mark.htm
+++ b/template/default/component/c_forum_mark.htm
@@ -6,7 +6,7 @@
 
 		<!-- 回帖奖励 -->
 		<!--{if $_G['forum_thread']['replycredit'] > 0 }-->
-			<img src="{IMGDIR}/thread_prize_s.png" class="hm" alt="{lang replycredit}" />
+			<i class="u-icons-replycredit"></i>
 			<strong>{$_G['forum_thread']['replycredit']} {$_G['setting']['extcredits'][$_G[forum_thread][replycredit_rule][extcreditstype]][unit]}{$_G['setting']['extcredits'][$_G[forum_thread][replycredit_rule][extcreditstype]][title]}</strong>
 			{lang thread_replycredit_tips1} 
 			{lang thread_replycredit_tips2}
