--- a/template/default/forum/forumdisplay.htm
+++ b/template/default/forum/forumdisplay.htm
@@ -1,6 +1,6 @@
 <!--{template common/header_m}-->
-<!--{subtemplate forum/header_list}-->
-<!--{subtemplate forum/header_common}-->
+<!--{subtemplate forum/forum_header_list}-->
+<!--{subtemplate forum/forum_header_custom}-->
 
 <!--{template forum/forumdisplay_top}-->
 <div class="boardnav">
@@ -10,6 +10,6 @@
 </div><!-- boardnav -->
 <!--{template forum/forumdisplay_bottom}-->
 
-<!--{subtemplate forum/footer}-->
-<!--{subtemplate forum/footer_common}-->
+<!--{subtemplate forum/forum_footer}-->
+<!--{subtemplate forum/forum_footer_custom}-->
 <!--{template common/footer}-->
