--- a/template/default/forum/viewthread.htm
+++ b/template/default/forum/viewthread.htm
@@ -1,6 +1,6 @@
 <!--{template common/header_m}-->
-<!--{subtemplate forum/header_view}-->
-<!--{subtemplate forum/header_common}-->
+<!--{subtemplate forum/forum_header_view}-->
+<!--{subtemplate forum/forum_header_custom}-->
 
 <div id="ct">
 	<!--{subtemplate forum/viewthread_top}-->
@@ -8,6 +8,6 @@
 	<!--{subtemplate forum/viewthread_bottom}-->
 </div>
 
-<!--{subtemplate forum/footer}-->
-<!--{subtemplate forum/footer_common}-->
+<!--{subtemplate forum/forum_footer}-->
+<!--{subtemplate forum/forum_footer_custom}-->
 <!--{template common/footer}-->
