--- a/css/forum/c-forum-mark.less
+++ b/css/forum/c-forum-mark.less
@@ -3,7 +3,11 @@
 	
 	&#pl_top{border-top:none;}
 
-	.hm{.y;margin-top: -1px;}
+	.u-icons-replycredit{
+		.size(10px,14px);.dbi;.y;
+		background:url('@{url}forum/replycredit.png') no-repeat 0 0;
+		//.y;margin-top: -1px;
+	}
 
 	.fz(12px,26px);
 
