--- a/template/default/component/c_forum_title.htm
+++ b/template/default/component/c_forum_title.htm
@@ -74,10 +74,9 @@
 		<!-- 作者信息 -->
 		<span class="u-author">
 			<!--{if $_G[forum_thread][authorid] && $_G[forum_thread][author]}-->
-				<!-- <a href="home.php?mod=space&uid=$_G[forum_thread][authorid]" title="$_G[forum_thread][author]"><!--{avatar($_G[forum_thread][authorid],small)}--></a> -->
-				作者: <a href="home.php?mod=space&uid=$_G[forum_thread][authorid]" title="$_G[forum_thread][author]">$_G[forum_thread][author]</a>
+				<a class="avatar" href="home.php?mod=space&uid=$_G[forum_thread][authorid]" title="$_G[forum_thread][author]"><!--{avatar($_G[forum_thread][authorid],small)}--></a>
+				<a href="home.php?mod=space&uid=$_G[forum_thread][authorid]" title="$_G[forum_thread][author]">$_G[forum_thread][author]</a>
 			<!--{else}-->
-				作者: 
 				<!--{if $_G['forum']['ismoderator']}-->
 					<a href="home.php?mod=space&uid=$_G[forum_thread][authorid]">{lang anonymous}</a>
 				<!--{else}-->
