--- a/template/default/forum/forum_header_view.htm
+++ b/template/default/forum/forum_header_view.htm
@@ -3,12 +3,13 @@
 	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i>返回</a>
 	<div class="i-header-title">版块标题</div>
 </header>
-<div class="listpage-container f-$_G[fid]-container">
+<div class="viewpage-container f-$_G[fid]-container">
 	<div class="wp">
 		<div id="pt" class="bm cl">
 			<div class="z">
 				<a href="./" class="nvhm" title="{lang homepage}">$_G['setting']['bbname']</a> 
-				<em>&rsaquo;</em>$navigation
+				$navigation
+				<em>&rsaquo;</em> <a href="forum.php?mod=viewthread&tid=$_G[tid]">$_G[forum_thread][short_subject]</a>
 			</div>
 		</div>
 
