--- a/css/forum/c-forum-title.less
+++ b/css/forum/c-forum-title.less
@@ -123,7 +123,7 @@
 			background-position: -67px -37px;
 		}
 		.bdsharebuttonbox{
-			.pa;.lt(-39px,26px);
+			.pa;.lt(-39px,26px);.z(2);
 			.w(115px);
 			padding:0 5px 0 10px;
 			background-color:#fafafa;
@@ -140,16 +140,20 @@
 			background-position:0 -10px;
 		}
 		.u-goto-box{
-			.pa;.lt(-96px,26px);
-			width: 126px;
-    		padding: 4px 5px 4px 10px;
+			.pa;.lt(-101px,26px);.z(2);
+			width: 111px;
+    		padding: 4px 10px 4px 10px;
 			background-color:#fafafa;
 			border:1px solid #ddd;
 			label{color:#999;}
 			label,a,input{margin-right:5px;}
+			a{margin-right:0;}
 		}
 		.u-goto-box{.none;}
 		&.on .u-goto-box{.db;}
+
+		#fj label, #fj input{.lh(24px);}
+		#fj input{.w(60px);}
 	}
 
 
